# forg

./: .gitignore  LICENSE  README.md  filesext.csv  forg.py  forgclean.py  pyproject.toml  setup.cfg  setup.py
src/forg/: ___init___.py  __main__.py  forg.py
