[tool.poetry]
name = "forg"
version = "0.1.0"
description = ""
authors = ["rqfreitas"]

[tool.poetry.dependencies]
python = "^3.7"
watchdogs = "^1.8.2"
watchdog = "^2.0.2"
observer = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
